# apt_attendance

./: .gitignore  README.md  WEBCAM_SETUP.md  package.json  test_webrtc.html
backend/: .gitignore  detect.py  main.py  models.py  package.json  postgres.sql  pyproject.toml  rtmps.py  shared.py  vstrack.py
backend/fake/src/: anti_spoof_predict.py  generate_patches.py  utility.py
backend/fake/src/data_io/: dataset_folder.py  dataset_loader.py  functional.py  transform.py
backend/fake/src/model_lib/: MiniFASNet.py  MultiFTNet.py
backend/models/faiss_model/: faiss_index.index  faiss_labels.pkl
backend/templates/: broadcast.html
frontend/: .gitignore  README.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/attendance/: page.tsx
frontend/app/demo/: page.tsx
frontend/components/: att-history.tsx  bg.tsx  custom-signin.tsx  face-camera.tsx  header.tsx  out-btn.tsx  providers.tsx  record-details.tsx  role-manager.tsx  root-layout.tsx  student-dashboard.tsx  teacher-dashboard.tsx  toggler.tsx  user-bootstrap.tsx  webrtc-client.tsx
frontend/lib/: api.ts  data.ts  types.ts  utils.ts
frontend/stores/: user_store.ts
model/: detect_recog.py  detection_recog_faiss.ipynb  drawSQL-pgsql-export-2025-09-13.sql  main.py  pyproject.toml  svm_model_160x160.pkl  test_detection.ipynb  training.ipynb  trainings.ipynb
model/Silent_Face_Anti_Spoofing/: detection_recog_faiss_silent_face.ipynb  requirements.txt  test.py
model/Silent_Face_Anti_Spoofing/src/: anti_spoof_predict.py
model/models/: svm_model.pkl
(+14 files in other folders)
