[project]
name = "model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "facenet-pytorch>=2.6.0",
    "joblib>=1.5.2",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
]
